Refactored some patterns within the AwsAccountController to be more consistent. Added additional unit tests and cleaned them up.