@@ -75,7 +75,6 @@ class AwsAccountServiceTest {
     @Test
     @DisplayName("Should create AWS account with IAM role")
     void createAccountWithRole_Success() {
-        // Given
         AwsAccount savedAccount = new AwsAccount();
         savedAccount.setId(accountId);
         savedAccount.setUser(testUser);
@@ -84,14 +83,13 @@ class AwsAccountServiceTest {
         savedAccount.setRoleArn("arn:aws:iam::123456789012:role/TestRole");
         savedAccount.setExternalId("external-id-12345");
         savedAccount.setCredentialType(AwsAccount.CredentialType.ROLE);
-        savedAccount.setStatus(AwsAccount.Status.TESTING); // What service actually sets
+        savedAccount.setStatus(AwsAccount.Status.TESTING);
 
         when(userRepository.findById(userId)).thenReturn(Optional.of(testUser));
         when(awsAccountRepository.findByUserIdAndAccountId(userId, "123456789012"))
                 .thenReturn(Optional.empty());
         when(awsAccountRepository.save(any(AwsAccount.class))).thenReturn(savedAccount);
 
-        // When
         AwsAccount result = awsAccountService.createAccountWithRole(
                 userId,
                 "123456789012",
@@ -100,11 +98,9 @@ class AwsAccountServiceTest {
                 "external-id-12345"
         );
 
-        // Then
         assertThat(result).isNotNull();
         assertThat(result.getAccountId()).isEqualTo("123456789012");
         assertThat(result.getCredentialType()).isEqualTo(AwsAccount.CredentialType.ROLE);
-        // Don't assert status here - it's tested in the next test
 
         verify(userRepository).findById(userId);
         verify(awsAccountRepository).findByUserIdAndAccountId(userId, "123456789012");
@@ -114,17 +110,14 @@ class AwsAccountServiceTest {
     @Test
     @DisplayName("Should set initial status to TESTING when creating account")
     void createAccountWithRole_InitialStatus() {
-        // Given
         when(userRepository.findById(userId)).thenReturn(Optional.of(testUser));
         when(awsAccountRepository.findByUserIdAndAccountId(any(), any())).thenReturn(Optional.empty());
         when(awsAccountRepository.save(any(AwsAccount.class))).thenReturn(testAccount);
 
-        // When
         awsAccountService.createAccountWithRole(
                 userId, "123456789012", "Test", "arn:aws:iam::123456789012:role/Role", "ext-id"
         );
 
-        // Then - Verify status is TESTING
         ArgumentCaptor<AwsAccount> accountCaptor = ArgumentCaptor.forClass(AwsAccount.class);
         verify(awsAccountRepository).save(accountCaptor.capture());
 
@@ -135,10 +128,8 @@ class AwsAccountServiceTest {
     @Test
     @DisplayName("Should throw exception when user not found")
     void createAccountWithRole_UserNotFound() {
-        // Given
         when(userRepository.findById(userId)).thenReturn(Optional.empty());
 
-        // When & Then
         assertThatThrownBy(() -> awsAccountService.createAccountWithRole(
                 userId, "123456789012", "Test", "arn", "ext-id"
         ))
@@ -151,12 +142,10 @@ class AwsAccountServiceTest {
     @Test
     @DisplayName("Should throw exception when duplicate account for user")
     void createAccountWithRole_DuplicateAccount() {
-        // Given
         when(userRepository.findById(userId)).thenReturn(Optional.of(testUser));
         when(awsAccountRepository.findByUserIdAndAccountId(userId, "123456789012"))
                 .thenReturn(Optional.of(testAccount));
 
-        // When & Then
         assertThatThrownBy(() -> awsAccountService.createAccountWithRole(
                 userId, "123456789012", "Test", "arn", "ext-id"
         ))
@@ -169,7 +158,6 @@ class AwsAccountServiceTest {
     @Test
     @DisplayName("Should create AWS account with access keys")
     void createAccountWithAccessKeys_Success() {
-        // Given
         String accessKey = "AKIAIOSFODNN7EXAMPLE";
         String secretKey = "wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY";
         String encryptedAccess = "encrypted-access-key";
@@ -182,7 +170,6 @@ class AwsAccountServiceTest {
         when(encryptionService.encrypt(secretKey)).thenReturn(encryptedSecret);
         when(awsAccountRepository.save(any(AwsAccount.class))).thenReturn(testAccount);
 
-        // When
         AwsAccount result = awsAccountService.createAccountWithAccessKeys(
                 userId,
                 "123456789012",
@@ -191,12 +178,10 @@ class AwsAccountServiceTest {
                 secretKey
         );
 
-        // Then
         assertThat(result).isNotNull();
         verify(encryptionService).encrypt(accessKey);
         verify(encryptionService).encrypt(secretKey);
 
-        // Verify encrypted keys are stored
         ArgumentCaptor<AwsAccount> accountCaptor = ArgumentCaptor.forClass(AwsAccount.class);
         verify(awsAccountRepository).save(accountCaptor.capture());
 
@@ -209,19 +194,16 @@ class AwsAccountServiceTest {
     @Test
     @DisplayName("Should encrypt credentials before storing")
     void createAccountWithAccessKeys_EncryptsCredentials() {
-        // Given
         when(userRepository.findById(userId)).thenReturn(Optional.of(testUser));
         when(awsAccountRepository.findByUserIdAndAccountId(any(), any())).thenReturn(Optional.empty());
         when(encryptionService.encrypt("plain-access")).thenReturn("encrypted-access");
         when(encryptionService.encrypt("plain-secret")).thenReturn("encrypted-secret");
         when(awsAccountRepository.save(any(AwsAccount.class))).thenReturn(testAccount);
 
-        // When
         awsAccountService.createAccountWithAccessKeys(
                 userId, "123456789012", "Test", "plain-access", "plain-secret"
         );
 
-        // Then
         verify(encryptionService).encrypt("plain-access");
         verify(encryptionService).encrypt("plain-secret");
     }
@@ -229,30 +211,25 @@ class AwsAccountServiceTest {
     @Test
     @DisplayName("Should generate valid external ID")
     void generateExternalId_Success() {
-        // When
         String externalId = awsAccountService.generateExternalId();
 
-        // Then
         assertThat(externalId).isNotNull();
         assertThat(externalId).isNotEmpty();
-        assertThat(UUID.fromString(externalId)).isNotNull(); // Should be valid UUID
+        assertThat(UUID.fromString(externalId)).isNotNull();
     }
 
     @Test
     @DisplayName("Should generate unique external IDs")
     void generateExternalId_Unique() {
-        // When
         String id1 = awsAccountService.generateExternalId();
         String id2 = awsAccountService.generateExternalId();
 
-        // Then
         assertThat(id1).isNotEqualTo(id2);
     }
 
     @Test
     @DisplayName("Should test connection and update status to ACTIVE on success")
     void testConnection_Success() {
-        // Given
         AwsConnectionTester.ConnectionTestResult successResult =
                 new AwsConnectionTester.ConnectionTestResult();
         successResult.setSuccess(true);
@@ -262,14 +239,11 @@ class AwsAccountServiceTest {
         when(connectionTester.testConnection(testAccount)).thenReturn(successResult);
         when(awsAccountRepository.save(any(AwsAccount.class))).thenReturn(testAccount);
 
-        // When
         AwsConnectionTester.ConnectionTestResult result =
-                awsAccountService.testConnection(accountId);
+                awsAccountService.testConnection(accountId, userId);
 
-        // Then
         assertThat(result.isSuccess()).isTrue();
 
-        // Verify status updated to ACTIVE
         ArgumentCaptor<AwsAccount> accountCaptor = ArgumentCaptor.forClass(AwsAccount.class);
         verify(awsAccountRepository).save(accountCaptor.capture());
         assertThat(accountCaptor.getValue().getStatus()).isEqualTo(AwsAccount.Status.ACTIVE);
@@ -278,7 +252,6 @@ class AwsAccountServiceTest {
     @Test
     @DisplayName("Should test connection and update status to INVALID on failure")
     void testConnection_Failure() {
-        // Given
         AwsConnectionTester.ConnectionTestResult failureResult =
                 new AwsConnectionTester.ConnectionTestResult();
         failureResult.setSuccess(false);
@@ -288,44 +261,71 @@ class AwsAccountServiceTest {
         when(connectionTester.testConnection(testAccount)).thenReturn(failureResult);
         when(awsAccountRepository.save(any(AwsAccount.class))).thenReturn(testAccount);
 
-        // When
         AwsConnectionTester.ConnectionTestResult result =
-                awsAccountService.testConnection(accountId);
+                awsAccountService.testConnection(accountId, userId);
 
-        // Then
         assertThat(result.isSuccess()).isFalse();
 
-        // Verify status updated to INVALID
         ArgumentCaptor<AwsAccount> accountCaptor = ArgumentCaptor.forClass(AwsAccount.class);
         verify(awsAccountRepository).save(accountCaptor.capture());
         assertThat(accountCaptor.getValue().getStatus()).isEqualTo(AwsAccount.Status.INVALID);
     }
 
     @Test
+    @DisplayName("Should throw exception when testing connection for non-owned account")
+    void testConnection_NotOwner() {
+        UUID otherUserId = UUID.randomUUID();
+        when(awsAccountRepository.findById(accountId)).thenReturn(Optional.of(testAccount));
+
+        assertThatThrownBy(() -> awsAccountService.testConnection(accountId, otherUserId))
+                .isInstanceOf(RuntimeException.class)
+                .hasMessage("Not authorized to access this AWS account");
+
+        verify(connectionTester, never()).testConnection(any());
+        verify(awsAccountRepository, never()).save(any());
+    }
+
+    @Test
     @DisplayName("Should get accounts by user ID")
     void getAccountsByUserId_Success() {
-        // Given
         when(awsAccountRepository.findByUserId(userId)).thenReturn(List.of(testAccount));
 
-        // When
         List<AwsAccount> accounts = awsAccountService.getAccountsByUserId(userId);
 
-        // Then
         assertThat(accounts).hasSize(1);
-        assertThat(accounts.get(0)).isEqualTo(testAccount);
+        assertThat(accounts.getFirst()).isEqualTo(testAccount);
         verify(awsAccountRepository).findByUserId(userId);
     }
 
     @Test
-    @DisplayName("Should get account by ID")
-    void getAccountById_Success() {
-        // Given
+    @DisplayName("Should get account by ID with ownership verification")
+    void getAccountByIdAndVerifyOwnership_Success() {
         when(awsAccountRepository.findById(accountId)).thenReturn(Optional.of(testAccount));
 
-        // When
+        AwsAccount account = awsAccountService.getAccountByIdAndVerifyOwnership(accountId, userId);
+
+        assertThat(account).isEqualTo(testAccount);
+        verify(awsAccountRepository).findById(accountId);
+    }
+
+    @Test
+    @DisplayName("Should throw exception when accessing non-owned account")
+    void getAccountByIdAndVerifyOwnership_NotOwner() {
+        UUID otherUserId = UUID.randomUUID();
+        when(awsAccountRepository.findById(accountId)).thenReturn(Optional.of(testAccount));
+
+        assertThatThrownBy(() -> awsAccountService.getAccountByIdAndVerifyOwnership(accountId, otherUserId))
+                .isInstanceOf(RuntimeException.class)
+                .hasMessage("Not authorized to access this AWS account");
+    }
+
+    @Test
+    @DisplayName("Should get account by ID without ownership verification")
+    void getAccountById_Success() {
+        when(awsAccountRepository.findById(accountId)).thenReturn(Optional.of(testAccount));
+
         AwsAccount account = awsAccountService.getAccountById(accountId);
 
-        // Then
         assertThat(account).isEqualTo(testAccount);
         verify(awsAccountRepository).findById(accountId);
     }
@@ -333,10 +333,8 @@ class AwsAccountServiceTest {
     @Test
     @DisplayName("Should throw exception when account not found")
     void getAccountById_NotFound() {
-        // Given
         when(awsAccountRepository.findById(accountId)).thenReturn(Optional.empty());
 
-        // When & Then
         assertThatThrownBy(() -> awsAccountService.getAccountById(accountId))
                 .isInstanceOf(RuntimeException.class)
                 .hasMessage("AWS account not found");
@@ -345,14 +343,11 @@ class AwsAccountServiceTest {
     @Test
     @DisplayName("Should update last scan time")
     void updateLastScanTime_Success() {
-        // Given
         when(awsAccountRepository.findById(accountId)).thenReturn(Optional.of(testAccount));
         when(awsAccountRepository.save(any(AwsAccount.class))).thenReturn(testAccount);
 
-        // When
         awsAccountService.updateLastScanTime(accountId);
 
-        // Then
         ArgumentCaptor<AwsAccount> accountCaptor = ArgumentCaptor.forClass(AwsAccount.class);
         verify(awsAccountRepository).save(accountCaptor.capture());
         assertThat(accountCaptor.getValue().getLastScanAt()).isNotNull();
@@ -361,45 +356,50 @@ class AwsAccountServiceTest {
     @Test
     @DisplayName("Should delete account with ownership verification")
     void deleteAccount_Success() {
-        // Given
         when(awsAccountRepository.findById(accountId)).thenReturn(Optional.of(testAccount));
         doNothing().when(awsAccountRepository).delete(testAccount);
 
-        // When
         awsAccountService.deleteAccount(accountId, userId);
 
-        // Then
         verify(awsAccountRepository).delete(testAccount);
     }
 
     @Test
     @DisplayName("Should throw exception when deleting non-owned account")
     void deleteAccount_NotOwner() {
-        // Given
         UUID otherUserId = UUID.randomUUID();
         when(awsAccountRepository.findById(accountId)).thenReturn(Optional.of(testAccount));
 
-        // When & Then
         assertThatThrownBy(() -> awsAccountService.deleteAccount(accountId, otherUserId))
                 .isInstanceOf(RuntimeException.class)
-                .hasMessage("Not authorized to delete this AWS account");
+                .hasMessage("Not authorized to access this AWS account");
 
         verify(awsAccountRepository, never()).delete(any());
     }
 
     @Test
-    @DisplayName("Should update account alias")
+    @DisplayName("Should update account alias with ownership verification")
     void updateAccountAlias_Success() {
-        // Given
         when(awsAccountRepository.findById(accountId)).thenReturn(Optional.of(testAccount));
         when(awsAccountRepository.save(any(AwsAccount.class))).thenReturn(testAccount);
 
-        // When
-        AwsAccount result = awsAccountService.updateAccountAlias(accountId, "New Alias");
+        awsAccountService.updateAccountAlias(accountId, userId, "New Alias");
 
-        // Then
         ArgumentCaptor<AwsAccount> accountCaptor = ArgumentCaptor.forClass(AwsAccount.class);
         verify(awsAccountRepository).save(accountCaptor.capture());
         assertThat(accountCaptor.getValue().getAccountAlias()).isEqualTo("New Alias");
+    }
+
+    @Test
+    @DisplayName("Should throw exception when updating alias for non-owned account")
+    void updateAccountAlias_NotOwner() {
+        UUID otherUserId = UUID.randomUUID();
+        when(awsAccountRepository.findById(accountId)).thenReturn(Optional.of(testAccount));
+
+        assertThatThrownBy(() -> awsAccountService.updateAccountAlias(accountId, otherUserId, "New Alias"))
+                .isInstanceOf(RuntimeException.class)
+                .hasMessage("Not authorized to access this AWS account");
+
+        verify(awsAccountRepository, never()).save(any());
     }
 }
